k8s/local/orgs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /orderer0/?(.*)
            backend:
              serviceName: orderer0-regulator-service
              servicePort: 8443
          - path: /orderer1/?(.*)
            backend:
              serviceName: orderer1-regulator-service
              servicePort: 8443
          - path: /orderer2/?(.*)
            backend:
              serviceName: orderer2-regulator-service
              servicePort: 8443
          - path: /peer0general/?(.*)
            backend:
              serviceName: peer0-general-service
              servicePort: 9443
          - path: /peer0airbus/?(.*)
            backend:
              serviceName: peer0-airbus-service
              servicePort: 9443
          - path: /airbusServer/?(.*)
            backend:
              serviceName: api-server-airbus-service
              servicePort: 4000
          - path: /generalServer/?(.*)
            backend:
              serviceName: api-server-general-service
              servicePort: 3000
